// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Expense Summary 1`] = `
<div>
  <h2>
    Viewing 
    3
     expenses
     totalling 
    $1,141.95
  </h2>
</div>
`;

exports[`Should render Expense Summary 2`] = `
<div>
  <h2>
    Viewing 
    0
     expenses
     totalling 
    $0.00
  </h2>
</div>
`;
